# termchat_client

./: Cargo.toml
src/: app.rs  keyhandling.rs  main.rs  run.rs
src/keyhandling/: connect.rs  connecting.rs  keyhandling.rs  menu.rs  message.rs  mod.rs  saved.rs  settings.rs
src/render/: connect_area.rs  connecting_area.rs  menu_area.rs  message_area.rs  mod.rs  popup.rs  render.rs  saved.rs  settings_area.rs
src/render/connect_area/: info.rs  menu.rs  mod.rs
src/websocket/: mod.rs  reader.rs  writer.rs
