[package]
name = "termchat_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
ratatui = "0.30.0-alpha.5"
futures = "0.3.31"
color-eyre = "0.6.5"
reqwest = "0.12.23"
serde_json = "1.0.143"
serde = "1.0.219"

[profile.release]
lto = false
codegen-units = 16
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
rpath = false
incremental = false
